# bevy-volumetric-clouds

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/models/low_poly_spaceship/: LICENSE.txt
assets/shaders/: clouds_compute.wgsl
examples/: clouds.rs  demo.rs  minimal.rs
src/: compute.rs  config.rs  fly_camera.rs  images.rs  lib.rs  render.rs  skybox.rs  ui.rs  uniforms.rs
src/shader_utils/: common.wgsl  mod.rs
src/shaders/: clouds.wgsl  clouds_compute.wgsl  common.wgsl
src/skybox/: mod.rs  system.rs
